--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>Emergent | Fullstack App</title>
+        <title>Eduability</title>
     <script type="text/javascript" crossorigin="anonymous" async="" src="./Emergent _ Fullstack App_files/array.js.download"></script><script defer="" src="./Emergent _ Fullstack App_files/bundle.js.download"></script><style>*, ::before, ::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -3664,41 +3664,7 @@ h1, h2, h3, h4, h5, h6 {
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-        <a id="emergent-badge" target="_blank" href="https://app.emergent.sh/?utm_source=emergent-badge" style="
-                display: flex !important;
-                align-items: center !important;
-                position: fixed !important;
-                bottom: 20px;
-                right: 20px;
-                text-decoration: none;
-                padding: 6px 10px;
-                font-family: -apple-system, BlinkMacSystemFont,
-                    &quot;Segoe UI&quot;, Roboto, Oxygen, Ubuntu, Cantarell,
-                    &quot;Open Sans&quot;, &quot;Helvetica Neue&quot;,
-                    sans-serif !important;
-                font-size: 12px !important;
-                z-index: 9999 !important;
-                box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15) !important;
-                border-radius: 8px !important;
-                background-color: #ffffff !important;
-                border: 1px solid rgba(255, 255, 255, 0.25) !important;
-            ">
-            <div style="display: flex; flex-direction: row; align-items: center">
-                <img style="width: 20px; height: 20px; margin-right: 8px" src="./Emergent _ Fullstack App_files/1201222">
-                <p style="
-                        color: #000000;
-                        font-family: -apple-system, BlinkMacSystemFont,
-                            &quot;Segoe UI&quot;, Roboto, Oxygen, Ubuntu,
-                            Cantarell, &quot;Open Sans&quot;,
-                            &quot;Helvetica Neue&quot;, sans-serif !important;
-                        font-size: 12px !important;
-                        align-items: center;
-                        margin-bottom: 0;
-                    ">
-                    Made with Emergent
-                </p>
-            </div>
-        </a>
+        
         <script type="text/javascript" crossorigin="anonymous" src="./Emergent _ Fullstack App_files/surveys.js.download"></script><script type="text/javascript" crossorigin="anonymous" src="./Emergent _ Fullstack App_files/config.js.download"></script><script type="text/javascript" crossorigin="anonymous" src="./Emergent _ Fullstack App_files/web-vitals.js.download"></script><script type="text/javascript" crossorigin="anonymous" src="./Emergent _ Fullstack App_files/dead-clicks-autocapture.js.download"></script><script type="text/javascript" crossorigin="anonymous" src="./Emergent _ Fullstack App_files/recorder.js.download"></script><script>
             !(function (t, e) {
                 var o, n, p, r;
