--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
         <title>Eduability</title>
-    <script type="text/javascript" crossorigin="anonymous" async="" src="./Emergent _ Fullstack App_files/array.js.download"></script><script defer="" src="./Emergent _ Fullstack App_files/bundle.js.download"></script><style>*, ::before, ::after {
+    <style>*, ::before, ::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
